--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -8,9 +8,6 @@ on:
 
 jobs:
   deploy:
-    defaults:
-      run:
-        working-directory: website
     runs-on: ubuntu-20.04
     permissions:
       # needs to git diff the repo
@@ -28,7 +25,7 @@ jobs:
         with:
           hugo-version: 'latest'
       - name: "Build"
-        run: mkdir -p website && hugo --minify
+        run: hugo --minify
       - name: "Deploy"
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
