--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -25,7 +25,10 @@ jobs:
         with:
           hugo-version: 'latest'
       - name: "Build"
-        run: hugo --minify
+        run: |
+          ls -lah
+          hugo version
+          hugo --minify
       - name: "Deploy"
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
