chore: test pipeline

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -20,20 +20,17 @@ jobs:
         with:
           submodules: recursive  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-      - name: Setup Hugo
+      - name: "Setup Hugo"
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
+          extended: true
+#          hugo-version: '0.91.2'
       - name: "Build"
-        run: |
-          ls -lah || true
-          ls -lah themes || true
-          ls -lah themes/LoveIt || true
-          hugo version || true
-          hugo --minify
+        run: hugo --minify
       - name: "Deploy"
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
-          github_token: ${{ secrets.DUCK_GITHUB_TOKEN }}
+          github_token: ${{ secrets.CI_TOKEN_WORKFLOW }}
           publish_dir: ./public
