--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,8 @@
 ### SEE https://hugoloveit.com/theme-documentation-basics/#site-configuration
 baseURL = 'https://code-space.dev/'
+RelativeURLs = false
+#uglyURLs = true
+CanonifyURLs = true
 title = 'Code Space'
 theme = 'LoveIt'
 languageCode = 'en-us'
