chore: set domain in deployment

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -44,5 +44,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
+          cname: "code-space.dev"
           github_token: ${{ secrets.CI_TOKEN_WORKFLOW }}
           publish_dir: ./public
